tests/error/alias_errors/partial_cycle.err
Error: Recursive type alias (at $FILE:6:0)
  | 
4 | Alias1 = guppy.type_alias("Alias1", "Alias2")
5 | Alias2 = guppy.type_alias("Alias2", "Alias3")
6 | Alias3 = guppy.type_alias("Alias3", "Alias2")
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Type alias cycle detected:
  |                                               `Alias2` -> `Alias3` -> `Alias2`

Note:
  | 
4 | Alias1 = guppy.type_alias("Alias1", "Alias2")
5 | Alias2 = guppy.type_alias("Alias2", "Alias3")
  | --------------------------------------------- `Alias2` defined here

Guppy compilation failed due to 1 previous error
